log
Wed 03 May 2023 03:25:32 PM UTC: 
 tests:  0|5
total_score: 0/70
a738b4b
Wed 03 May 2023 11:01:07 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:13: error: unused variable ‘adj_n’ [-Werror=unused-variable]
   57 |       Node* adj_n = createNode();
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9cb305c
Wed 03 May 2023 11:02:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
34ce51c
